# HabitsTracker

./: .gitignore  docker-compose.yaml  example.env  pyproject.toml  readme.md  requirements.txt
config/: settings.py  urls.py
habits/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_alter_habit_periodicity.py  0003_alter_habit_owner.py
users/: models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_telegram_chat_id.py
